fix: GPT 응답 처리 시 NPE 방어 및 Jackson unknown 필드 무시 설정 추가